--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,25 +1,25 @@
 header {
   font-size: 48px;
   background-color: aquamarine;
-  padding-left: 12px;
+  padding: 12px;
   border: 5px;
   border-color: black;
   border-radius: 5px;
+  display: flex;
+  justify-content: center;
 }
 
 body {
-  background-color: blue;
-}
-
-section{
-  background-color: aquamarine;
-  border-radius: 5px;
+  background-color: rgb(5, 128, 121);
+  padding-left: 24px;
+  padding-right: 24px;
 }
 
 ul {
   padding: 12px;
   list-style-position: inside;
 }
+
 
 ul li {
   font-size: large;
@@ -28,3 +28,61 @@ ul li {
 ul li :hover {
   color: blueviolet;
 }
+
+section{
+  background-color: aquamarine;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+#mainsection{
+  background-color: aquamarine;
+  border-radius: 5px;
+  justify-content: left;
+}
+
+
+h1{
+  background-color: aquamarine;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  padding: 12px;
+}
+
+h2{
+  background-color: aquamarine;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  padding-top:12px;
+}
+
+p{
+  background-color: aquamarine;
+  border-radius: 5px;
+  justify-content: left;
+  padding-left: 12px;
+}
+
+img{
+  border-radius: 5px;
+}
+
+figcaption{
+  font-size: x-small;
+}
+
+nav{
+  background-color: aquamarine;
+}
+
+article{
+  background-color: aquamarine;
+  border-radius: 5px;
+}
+
+
+
