--- a/project3/css/project3.css
+++ b/project3/css/project3.css
@@ -1,15 +1,19 @@
+
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
+
+
 html {
   font-size: 16px;
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'InstrumentSerif-Regular.ttf';
   line-height: 1.5;
   background-color: #f5f5f5;
   color: #333;
@@ -36,6 +40,33 @@ a:hover {
   text-decoration: underline;
 }
 
+ul.breadcrumb {
+  padding: 10px 16px;
+  list-style: none;
+  background-color: #eee;
+}
+
+ul.breadcrumb li {
+  display: inline;
+  font-size: 18px;
+}
+
+ul.breadcrumb li+li:before {
+  padding: 8px;
+  color: black;
+  content: "/\00a0";
+}
+
+ul.breadcrumb li a {
+  color: #0275d8;
+  text-decoration: none;
+}
+
+ul.breadcrumb li a:hover {
+  color: #01447e;
+  text-decoration: underline;
+}
+
 nav {
   overflow: hidden;
   background-color: #333;
@@ -57,7 +88,7 @@ nav a:hover {
 }
 
 nav a.active {
-  background-color: #04aa6d;
+  background: linear-gradient(to bottom right, #330606, #6b0606);
   color: white;
 }
 
@@ -124,6 +155,23 @@ footer {
   color: white;
   text-align: center;
   padding: 10px;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.column {
+  flex-basis: 50%;
+}
+
+p{
+  padding: 15px;
+}
+
+ol{
+  list-style: inside;
 }
 
 /*# sourceMappingURL=project3.css.map */
