--- a/project3/css/project3.scss
+++ b/project3/css/project3.scss
@@ -1,133 +1,205 @@
 * {
-  box-sizing: border-box; 
+  box-sizing: border-box;
   margin: 0;
-  padding: 0; 
+  padding: 0;
 }
 
 html {
-  font-size: 16px; 
+  font-size: 20px;
 }
 
 body {
-  font-family: Arial, sans-serif; 
-  line-height: 1.5; 
-  background-color: #f5f5f5; 
-  color: #333; 
-  min-height: 100vh; 
-  display: flex; 
-  flex-direction: column; 
-  padding: 10px; 
+  font-family: 'InstrumentSerif-Regular.ttf';
+  line-height: 1.5;
+  background-color: #f5f5f5;
+  color: #333;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
 }
 
 h1 {
-  font-size: 28px; 
+  font-size: 28px;
 }
 
 h2 {
-  font-size: 18px; 
+  font-size: 18px;
 }
 
 a {
-  color: #0077cc; 
-  text-decoration: none; 
+  color: #0077cc;
+  text-decoration: none;
+
   &:hover {
-    text-decoration: underline; 
+    text-decoration: underline;
   }
 }
 
-nav {
-  overflow: hidden; 
-  background-color: #333; 
-  a {
-    float: left; 
-    display: block; 
-    color: #f2f2f2; 
-    text-align: center; 
-    padding: 14px 16px; 
-    text-decoration: none; 
-    font-size: 17px; 
-    &:hover {
-      background-color: #ddd; 
-      color: black; 
+ul.breadcrumb {
+  padding: 10px 16px;
+  list-style: none;
+  background-color: #eee;
+
+  li {
+    display: inline;
+    font-size: 18px;
+
+    + li:before {
+      padding: 8px;
+      color: black;
+      content: "/\00a0";
     }
-    &.active {
-      background-color: #04aa6d; 
-      color: white; 
-    }
-  }
-  .icon {
-    display: none; 
-  }
-  &.responsive {
+
     a {
-      float: none; 
-      display: block; 
-      text-align: left; 
+      color: #0275d8;
+      text-decoration: none;
+
+      &:hover {
+        color: #01447e;
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
+a[href="#top"] {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  color: #fff;
+  background-color: #000;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+nav {
+  overflow: hidden;
+  background-color: #333;
+
+  a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+
+    &:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
+    &.active {
+      background: linear-gradient(to bottom right, #330606, #6b0606);
+      color: white;
+    }
+  }
+
+  .icon {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  nav {
+    a {
+      &:not(:first-child) {
+        display: none;
+      }
+
+      &.icon {
+        float: right;
+        display: block;
+      }
+    }
+
+    &.responsive {
+      position: relative;
+
+      .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+      }
+
+      a {
+        float: none;
+        display: block;
+        text-align: left;
+      }
     }
   }
 }
 
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {
-    display: none; 
+  .column {
+    display: contents;
   }
 }
 
-@media screen and (max-width: 768px) {
-  nav ul {
-    display: none; 
-    flex-direction: column; 
-    align-items: center; 
-    width: 100%; 
-    margin-top: 10px; 
+@media screen and (max-width: 1200px) {
+  .column {
+    font-size: 16px;
   }
-}
 
-.topnav a {
-  &.icon {
-    float: right; 
-    display: block; 
-  }
-  &.responsive {
-    .icon {
-      position: absolute; 
-      right: 0; 
-      top: 0; 
-    }
+  body {
+    background-color: lightgray;
   }
 }
 
 header {
-  font-size: 48px; 
-  font-weight: 1000; 
-  font-family: Arial, sans-serif; 
-  text-align: center; 
-  padding: 10px; 
-  background-color: #fff; 
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  font-size: 48px;
+  font-weight: 1000;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  padding: 10px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .call-to-action {
-  display: flex; 
-  text-align: center; 
-  padding: 20px; 
-  margin: 10px; 
-  border-radius: 20px 5px 60px 20px; 
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2); 
-  background: linear-gradient(to bottom right, #330606, #6b0606); 
-  color: #ffffff; 
-  text-decoration: none; 
-  font-weight: bold; 
-  text-transform: uppercase; 
-  font-size: 18px; 
+  display: flex;
+  text-align: center;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 20px 5px 60px 20px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  background: linear-gradient(to bottom right, #330606, #6b0606);
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 18px;
 }
 
 footer {
-  position: fixed; 
-  left: 0; 
-  bottom: 0; 
-  width: 100%; 
-  background-color: #333; 
-  color: white; 
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #333;
+  color: white;
   text-align: center;
+  padding: 10px;
 }
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.column {
+  flex-basis: 50%;
+}
+
+p {
+  padding: 15px;
+}
+
+ol {
+  list-style: inside;
+}
+
+/*# sourceMappingURL=project3.css.map */
